# HearAssist

./: AssemblyAI.py  configure.py  main.py  pyproject.toml
templates/: index.html
