[tool.poetry]
name = "repl_python3_HearAssist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
PyAudio = "^0.2.11"
nest-asyncio = "^1.5.1"
replit = "^3.2.4"
websockets = "^10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
